@@ -1,0 +1,7 @@
+{
+	"Revitalize.Objects.Crafting.Blueprint.Workbench.Items.Misc.RadioactiveFuel":
+	{
+		"displayName":"Blueprint: Radioactive Fuel Cell",
+		"description":"A blueprint used on how to craft a radioactive fuel cell at the workbench!"
+	},
+}
