@@ -1,0 +1,7 @@
+{
+	"Revitalize.Framework.World.Objects.Items.Misc.RadioactiveFuel":
+	{
+		"displayName":"Radioactive Fuel Cell",
+		"description":"A radioactive fuel cell used to power various nuclear machines!"
+	},
+}
