@@ -1,7 +1,0 @@
-{
-	"Revitalize.Framework.World.Objects.Items.Misc.RadioactiveFuel":
-	{
-		"displayName":"Radioactive Fuel",
-		"description":"A radioactive fuel cell used to power various machines!"
-	},
-}
